2009-06-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove Freeze function.
	* include/Makefile.am: Remove freeze.hh from list.
	* include/roboptim/core/freeze.hh: Remove.
	* src/Makefile.am: Remove freeze.cc from list.
	* src/freeze.cc: Remove.
	* tests/Makefile.am: Remove test.
	* tests/freeze.cc: Remove.
	* tests/freeze.stdout: Remove.
	* tests/testsuite.at: Remove test.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Use new pkg-config rules.
	* Makefile.am: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize with share.
	* doc/Makefile.am,
	* doc/sf-upload.sh.in: Synchronize.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synhronize with share.
	* build-aux/doxygen.m4: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: Synchronize.
	* build-aux/roboptim-core.m4: New.
	* configure.ac: Update to use new rules.
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/sf-upload.sh.in: Synchronize.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix compilation warning.
	* include/roboptim/core/generic-solver.hh:
	Return a dummy value in impossible case.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo in method name.
	* include/roboptim/core/generic-solver.hh: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update quickstart.
	* src/doc.hh: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update quickstart.
	* src/doc.hh: Update to new interface.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Document test.
	* tests/n-times-derivable-function.cc: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Document tests.
	* tests/problem-cc.cc,
	* tests/result.cc,
	* tests/visualization-gnuplot-function.cc,